syntax = "proto3";

option csharp_namespace = "OnThisDay.TodayEvents.Protos";

package TodayEventsService;

message TodayEvent {
    int32 id = 1;
    string name = 2;
    string description = 3;
    string details = 4;
}

message TodaysEvents {
    int32 id = 1;
    string todaysEventsId = 2;
    repeated TodayEvent todayEvents = 3;
}

message GetAllRequest {
    string todaysEventsId = 1;
}

message GetAllResponse {
    repeated TodayEvent todayEvents = 1;
}

service TodayEvents {
    rpc GetAll(GetAllRequest) returns (GetAllResponse);
}
